--- a/index.html
+++ b/index.html
@@ -85,5 +85,25 @@ a:active {
 </table>
 <p> </p> 	
 <img src = "https://raw.githubusercontent.com/ardisdataset/ARMAS/master/VeryShort/Test1.png">
+	
+	
+	<!-- Default Statcounter code for Audio
+https://ardisdataset.github.io/ARMAS/ -->
+<script type="text/javascript">
+var sc_project=12619275; 
+var sc_invisible=1; 
+var sc_security="2a12f8a0";
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics"
+href="https://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="https://c.statcounter.com/12619275/0/2a12f8a0/1/"
+alt="Web Analytics"
+referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+<!-- End of Statcounter Code -->
+	
 </body>
 </html>
