--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a:active {
 <h2><center><p style="color:white">Audio Clips</p></center></h2>
 <p style="color:white"> Visualised with Mozilla Firefox <a href="https://github.com/ARDISDataset"> GitHome </a>
 <table style="width:100%">
-<tr><td><h3 style = "color: white"> Gap length: 528.38 ms (4227 samples) </h3></td></tr>
+<tr><td><h3 style = "color: white"> Gap length: 513.75 ms (4110 samples) </h3></td></tr>
    <tr>
     <th><div align="left" style="border:1px solid red"><p style="color:white">Or</p></div></th>
     <th><div align="left" style="border:1px solid red"><p style="color:white">RegionDrop</p></div></th>
@@ -72,13 +72,13 @@ a:active {
 	<tr>
     </tr><tr> <td> </td>
 
-	</tr><tr> <td style="color:white">Proposed-LSTM </td> <td style="color:pink"> -2.8165   </td> <td  style="color:white"> 0.8975 </td> <td  style="color:pink">14.5594 </td>
-	</tr><tr> <td style="color:white">Proposed-RF </td> <td style="color:red"> -2.0495 </td> <td style="color:pink"> 0.9905  </td> <td style="color:red"> 15.1293 </td>
-	</tr><tr> <td style="color:white">wCP </td> <td style="color:white"> -3.8945 </td> <td style="color:white"> 0.7598  </td> <td style="color:white"> 0.2623 </td>
-    </tr><tr> <td style="color:white">D2WGAN  </td> <td style="color:white"> -3.0884 </td> <td style="color:red">  0.9981 </td> <td style="color:white">  13.4703 </td>
-	</tr><tr> <td style="color:white">SG </td> <td style="color:white"> -3.7093 </td> <td style="color:white"> 0.9511  </td> <td style="color:white"> 3.2057 </td>
-	</tr><tr> <td style="color:white">SPAIN </td> <td style="color:white"> -3.8112 </td> <td style="color:white"> 0.8160  </td> <td style="color:white"> 0.8902</td>
-	</tr><tr> <td style="color:white">TDC </td> <td style="color:white"> -3.8851  </td> <td style="color:white"> 0.7846  </td> <td style="color:white"> 0.2749</td>
+	</tr><tr> <td style="color:white">Proposed-LSTM </td> <td style="color:red"> -3.5880  </td> <td  style="color:red"> 0.9219 </td> <td  style="color:pink">1.6146 </td>
+	</tr><tr> <td style="color:white">Proposed-RF </td> <td style="color:pink"> -3.6380 </td> <td style="color:pink"> 0.9123  </td> <td style="color:red"> 1.8091 </td>
+	</tr><tr> <td style="color:white">wCP </td> <td style="color:white"> -3.6517 </td> <td style="color:white"> 0.8945 </td> <td style="color:white"> -1.0086 </td>
+    </tr><tr> <td style="color:white">D2WGAN  </td> <td style="color:white"> -3.6771 </td> <td style="color:white">  0.8933 </td> <td style="color:white">  -0.9812 </td>
+	</tr><tr> <td style="color:white">SG </td> <td style="color:white"> -3.7535 </td> <td style="color:white"> 0.9025  </td> <td style="color:white"> -2.3291 </td>
+	</tr><tr> <td style="color:white">SPAIN </td> <td style="color:white"> -3.6733 </td> <td style="color:white"> 0.8930 </td> <td style="color:white"> -0.9459 </td>
+	</tr><tr> <td style="color:white">TDC </td> <td style="color:white"> -3.6538 </td> <td style="color:white"> 0.8943  </td> <td style="color:white"> -1.0140 </td>
 
 
 	</tr>
