--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ a:active {
 <h2><center><p style="color:white">Audio Clips</p></center></h2>
 <p style="color:white"> Visualised with Mozilla Firefox <a href="https://github.com/ARDISDataset"> GitHome </a>
 <table style="width:100%">
-<tr><td><h3 style = "color: white"> Gap length: 513.75 ms (4110 samples) </h3></td></tr>
+<tr><td><h3 style = "color: white"> Measured gap length: 513.75 ms (4110 samples) </h3></td></tr>
    <tr>
     <th><div align="left" style="border:1px solid red"><p style="color:white">Or</p></div></th>
     <th><div align="left" style="border:1px solid red"><p style="color:white">RegionDrop</p></div></th>
