--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ a:active {
 	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/anchor.wav" type="audio/mp3"></td>
 	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/RF.wav" type="audio/mp3"></td>
 	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/LSTM.wav" type="audio/mp3"></td>
-    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/D2WGAN.mp3" type="audio/mp3"></td>
+    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/D2WGAN.wav" type="audio/mp3"></td>
 	</tr>
 	
 	</tr> <tr>
