--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ a:active {
    
 <body style="background-color:black;">
 <title> Audio Recon</title>
-<h2><center><p style="color:white">Audio Clips (for lengthy gap reconstruction go to <a href="https://github.com/ARDISDataset/ARMAS">ARMAS</a>)</p></center></h2>
+<h2><center><p style="color:white">Audio Clips (for lengthy gap reconstruction go to <a href="https://ardisdataset.github.io/ARMAS/">ARMAS</a>)</p></center></h2>
 <p style="color:white"> Visualised with Mozilla Firefox <a href="https://github.com/ARDISDataset"> GitHome </a>
 <table style="width:100%">
 <tr><td><h3 style = "color: white"> Measured gap length: 513.75 ms (4110 samples) </h3></td></tr>
