--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ a:active {
    
 <body style="background-color:black;">
 <title> Audio Recon</title>
-<h2><center><p style="color:white">Audio Clips (for lengthy gap reconstruction go to <a href="https://ardisdataset.github.io/ARMAS/">ARMAS</a>)</p></center></h2>
+<h2><center><p style="color:white">Audio Clips (for lengthy gap reconstructions go to <a href="https://ardisdataset.github.io/ARMAS/">ARMAS</a>)</p></center></h2>
 <p style="color:white"> Visualised with Mozilla Firefox <a href="https://github.com/ARDISDataset"> GitHome </a>
 <table style="width:100%">
 <tr><td><h3 style = "color: white"> Measured gap length: 513.75 ms (4110 samples) </h3></td></tr>
@@ -63,7 +63,8 @@ a:active {
 <p> </p> <br> <br> <br><font color = "white"> Comparison of the different methods (<font color = "red">red:</font> best, <font color = "pink"> pink </font>: second best). </font><br>
 
 
-<table style="width:30%">
+<table style="width:100%">
+	<td>
    <tr>
     <th><div align="left" style="border:1px solid red"><p style="color:white">Method/Metric</p></div></th>
     <th><div align="left" style="border:1px solid red"><p style="color:white">ODG</p></div></th>
@@ -82,6 +83,10 @@ a:active {
 
 
 	</tr>
+	</td>
+	<td>
+		test
+	</td>
 </table>
 <p> </p> 	
 <img src = "https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/Test1.png">
