--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ a:active {
 <p> </p> <br> <br> <br><font color = "white"> Comparison of the different methods (<font color = "red">red:</font> best, <font color = "pink"> pink </font>: second best). </font><br>
 
 
-<table style="width:100%">
-	<td>
+<table style="width:30%">
+
    <tr>
     <th><div align="left" style="border:1px solid red"><p style="color:white">Method/Metric</p></div></th>
     <th><div align="left" style="border:1px solid red"><p style="color:white">ODG</p></div></th>
@@ -83,14 +83,30 @@ a:active {
 
 
 	</tr>
-	</td>
-	<td>
-		test
-	</td>
 </table>
 <p> </p> 	
 <img src = "https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/Test1.png">
+
+<p> </p> 
+	<hr>
+<table style="width:100%">
+<tr><td><h3 style = "color: white"> The introduced latent embedding's distortion effect is imperceptible. </h3></td></tr>
+   <tr>
+    <th><div align="left" style="border:1px solid red"><p style="color:white">Or</p></div></th>
+    <th><div align="left" style="border:1px solid red"><p style="color:white">Original with latent embedding</p></div></th>
+	<tr> 
+    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/OrAudio.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/StegAudio.wav" type="audio/mp3"></td>
+	</tr>
 	
+	</tr>
+
+   <tr>
+	<td><img src = "https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/CompareOr_Steg.png"></td>
+   
+   </tr>
+
+</table>
 	
 	<!-- Default Statcounter code for Audio
 https://ardisdataset.github.io/ARMAS/ -->
