--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ a:active {
 
 <p> </p> 
 	<hr>
-<table style="width:100%">
-<tr><td><h3 style = "color: white"> The introduced latent embedding's distortion effect is imperceptible. </h3></td></tr>
+<table style="width:30%">
+<tr><td><h3 style = "color: white"> The introduced latent embedding distortion's effect is imperceptible. </h3></td></tr>
    <tr>
     <th><div align="left" style="border:1px solid red"><p style="color:white">Or</p></div></th>
     <th><div align="left" style="border:1px solid red"><p style="color:white">Original with latent embedding</p></div></th>
