--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ a:active {
    
 <body style="background-color:black;">
 <title> Audio Recon</title>
-<h2><center><p style="color:white">Audio Clips (for lengthy gap reconstructions go to <a href="https://ardisdataset.github.io/ARMAS/">ARMAS</a>)</p></center></h2>
+<h2><center><p style="color:white">Audio Clips (for lengthy gap reconstructions go to <a href="https://ardisdataset.github.io/ARLAS/">ARLAS</a>)</p></center></h2>
 <p style="color:white"> Visualised with Mozilla Firefox <a href="https://github.com/ARDISDataset"> GitHome </a>
 <table style="width:100%">
 <tr><td><h3 style = "color: white"> Measured gap length: 513.75 ms (4110 samples) </h3></td></tr>
@@ -36,11 +36,11 @@ a:active {
     <th><div align="left" style="border:1px solid red"><p style="color:white">HCR-LSTM</p></div></th>
 	<th><div align="left" style="border:1px solid red"><p style="color:white">D2WGAN</p></div></th>
 	<tr> 
-    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/Original.mp3" type="audio/mp3"></td>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/anchor.wav" type="audio/mp3"></td>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/RF.wav" type="audio/mp3"></td>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/LSTM.wav" type="audio/mp3"></td>
-    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/D2WGAN.wav" type="audio/mp3"></td>
+    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/Original.mp3" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/anchor.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/RF.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/LSTM.wav" type="audio/mp3"></td>
+    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/D2WGAN.wav" type="audio/mp3"></td>
 	</tr>
 	
 	</tr> <tr>
@@ -51,10 +51,10 @@ a:active {
    </tr>
 
    <tr>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/SG.wav" type="audio/mp3"></td>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/wCP.wav" type="audio/mp3"></td>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/SPAIN.wav" type="audio/mp3"></td>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/TDC.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/SG.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/wCP.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/SPAIN.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/TDC.wav" type="audio/mp3"></td>
    
    </tr>
 
@@ -85,7 +85,7 @@ a:active {
 	</tr>
 </table>
 <p> </p> 	
-<img src = "https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/VeryShort/Test1.png">
+<img src = "https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/VeryShort/Test1.png">
 
 <p> </p> 
 	<hr>
@@ -95,21 +95,21 @@ a:active {
     <th><div align="left" style="border:1px solid red"><p style="color:white">Or</p></div></th>
     <th><div align="left" style="border:1px solid red"><p style="color:white">Original with latent embedding</p></div></th>
 	<tr> 
-    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/OrAudio.wav" type="audio/mp3"></td>
-	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/StegAudio.wav" type="audio/mp3"></td>
+    <td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/OrAudio.wav" type="audio/mp3"></td>
+	<td><audio controls><source src="https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/StegAudio.wav" type="audio/mp3"></td>
 	</tr>
 	
 	</tr>
 
    <tr>
-	<td><img src = "https://raw.githubusercontent.com/ardisdataset/ARMAS2/master/CompareOr_Steg.png"></td>
+	<td><img src = "https://raw.githubusercontent.com/ardisdataset/ARLAS2/master/CompareOr_Steg.png"></td>
    
    </tr>
 
 </table>
 	
 	<!-- Default Statcounter code for Audio
-https://ardisdataset.github.io/ARMAS/ -->
+https://ardisdataset.github.io/ARLAS/ -->
 <script type="text/javascript">
 var sc_project=12619275; 
 var sc_invisible=1; 
